# book_recommendation

./: .env.example  .gitignore  LICENSE  README.md  cspell.json  data-exploration.ipynb  gradio-dashboard.py  pyproject.toml  render.yaml  requirements-notebooks-full.txt  requirements-notebooks-full.txt.bak  requirements-notebooks.txt  requirements.txt  sentiment-analysis.ipynb  text-classification.ipynb  vector-search.ipynb
.github/workflows/: ci.yml
docs/: DEVELOPING.md
notebooks/: data-exploration.ipynb  sentiment-analysis.ipynb  text-classification.ipynb  vector-search.ipynb
scripts/: build_catalog.py
src/book_recommendation/: __init__.py  main.py
src/book_recommendation/api/: deps.py
src/book_recommendation/api/v1/: router.py
src/book_recommendation/api/v1/endpoints/: __init__.py  health.py  recommendations.py
src/book_recommendation/core/: settings.py
src/book_recommendation/schemas/: __init__.py  recommendation.py
src/book_recommendation/services/: __init__.py  catalog_validation.py  recommendation.py
tests/: conftest.py
tests/api/: test_health.py  test_recommendations.py
tests/core/: test_settings_catalog_paths.py
tests/fixtures/live_minimal/: books_with_emotions.csv  tagged_description.txt
tests/live/: test_smoke_openai.py
tests/services/: test_catalog_validation.py
