[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "book-recommendation"
version = "0.1.0"
description = "Semantic book recommendation API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.0",
  "typing-extensions>=4.12",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langchain-openai>=0.3",
  "langchain-text-splitters>=0.3",
  "langchain-chroma>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.28",
]
catalog-build = [
  "numpy>=1.24,<2",
  "kagglehub>=0.2",
  "tqdm>=4.66",
  "transformers>=4.40,<4.46",
  "torch>=2.0,<2.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires RUN_LIVE=1 and a real OPENAI_API_KEY; calls OpenAI and builds Chroma",
]
